style: update css, fix invisible links on login/registration page

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -5,23 +5,3 @@ p.nav-link {
 .right-nav {
   background-color: #04b589;
 }
-
-.navbar a:link {
-  color: whitesmoke;
-}
-
-/* visited link */
-.navbar a:visited {
-  color: whitesmoke;
-}
-
-/* mouse over link */
-.navbar a:hover {
-  color: whitesmoke;
-  text-decoration: none;
-}
-
-/* selected link */
-.navbar a:active {
-  color: whitesmoke;
-}
