--- a/src/components/profile/welcomeHeader/welcomeHeader.module.css
+++ b/src/components/profile/welcomeHeader/welcomeHeader.module.css
@@ -9,4 +9,7 @@
   .updateAvatarBtn {
     margin-bottom: 30px;
   }
+  .header {
+    text-align: center;
+  }
 }
